--- a/process/makefile
+++ b/process/makefile
@@ -1,2 +1,2 @@
-pdec: process.cpp primedecompose.cpp
-	g++ -g -Wall -o pdec process.cpp primedecompose.cpp -lgmp
+process: process.cpp primedecompose.cpp
+	g++ -g -Wall -o process process.cpp primedecompose.cpp -lgmp
