--- a/threads/makefile
+++ b/threads/makefile
@@ -1,2 +1,2 @@
-pdec: threads.cpp primedecompose.cpp
-	g++ -pthread -g -Wall -o pdec threads.cpp primedecompose.cpp -lgmp
+threads: threads.cpp primedecompose.cpp
+	g++ -pthread -g -Wall -o threads threads.cpp primedecompose.cpp -lgmp
